<resources>
    <string name="app_name">todo_app</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="didn_t_have_any_account_msg">Didn’t have any account?</string>
    <string name="sign_up_here_word">Sign Up here</string>
    <string name="register">Register</string>
    <string name="name_hint">Name</string>
    <string name="experience_hint">Years Of Experience</string>
    <string name="address_hint">Your Address</string>
    <string name="experience_level_hint">Experience Level</string>
    <string name="sign_in_here_word">Sign In here</string>
    <string name="profile">Profile</string>
    <string name="add_task">Add Task</string>
    <string name="add_img">Add Img</string>
    <string name="task_title_word">Task title</string>
    <string name="title_hint">Enter title here…</string>
    <string name="task_description_word">Task Description</string>
    <string name="desc_hint">Enter description here...</string>
    <string name="priority_level_hint">priority level</string>
    <string name="priority_word">Priority</string>
    <string name="date_hint">choose due date...</string>
    <string name="date_word">Date</string>
    <string name="status_word">Status</string>


</resources>