<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.authentication_feature.presentation_layer.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginVertical="10sp"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold" />


    <include
        android:id="@+id/phone_layout"
        layout="@layout/phone_input_layout" />

    <include
        android:id="@+id/password_layout"
        layout="@layout/password_input_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:paddingVertical="20sp"
        android:text="@string/sign_in"
        android:onClick="signIn"
        app:cornerRadius="10sp" />
    <ProgressBar
        android:id="@+id/circularProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginVertical="16sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didn_t_have_any_account_msg"
            android:textColor="@color/grey"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="goToSignUpScreen"
            android:text="@string/sign_up_here_word"
            android:textColor="@color/vilote"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>



</LinearLayout>