<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20sp"
        tools:context=".features.task_feature.presentation.AddTaskActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/return_arrow"
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:layout_gravity="center"
                android:layout_marginVertical="20sp"
                android:onClick="returnToHomeScreen"
                android:src="@drawable/back_arrow"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="2dp"
                android:text="@string/add_task"
                android:textSize="20sp"
                android:textStyle="bold"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:background="@drawable/doted_container"
            android:gravity="center"
            android:onClick="selectImage"
            android:orientation="horizontal"

            android:padding="12dp">

            <ImageView
                android:id="@+id/selected_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="100sp"
                android:maxHeight="100sp"
                android:minWidth="25sp"
                android:minHeight="25sp"
                android:src="@drawable/add_photo_icon" />

            <TextView
                android:id="@+id/add_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/add_img"
                android:textColor="@color/vilote"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5sp"
            android:text="@string/task_title_word"
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="10sp"
            app:boxCornerRadiusBottomStart="10sp"
            app:boxCornerRadiusTopEnd="10sp"
            app:boxCornerRadiusTopStart="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/my_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5sp"
            android:text="@string/task_description_word"
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/my_task_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/desc_hint"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="5"
                android:minLines="5"
                android:scrollbars="vertical" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5sp"
            android:text="@string/priority_word"
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priority_level_contianer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/priority_level_hint"
            android:textColorHint="@color/vilote"
            app:boxBackgroundColor="@color/light_vilote"

            app:boxCornerRadiusBottomEnd="10sp"
            app:boxCornerRadiusBottomStart="10sp"
            app:boxCornerRadiusTopEnd="10sp"
            app:boxCornerRadiusTopStart="10sp"
            app:endIconMode="dropdown_menu"
            app:endIconTint="@color/vilote"
            app:startIconDrawable="@drawable/flage_icon"
            app:startIconTint="@color/vilote"

            >

            <AutoCompleteTextView
                android:id="@+id/priority_dropdown_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownHeight="wrap_content"
                android:importantForAutofill="no"
                android:inputType="none"
                android:paddingHorizontal="40sp"
                android:paddingVertical="15sp"
                android:textColor="@color/vilote"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:text="@string/date_word"
            android:textColor="@color/grey"
            android:textSize="16sp" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_picker_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_hint"
            app:boxCornerRadiusBottomEnd="10sp"
            app:boxCornerRadiusBottomStart="10sp"
            app:boxCornerRadiusTopEnd="10sp"
            app:boxCornerRadiusTopStart="10sp"
            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/date_icon"
            app:endIconMode="custom"
            app:endIconTint="@color/vilote"

            >

            <AutoCompleteTextView
                android:id="@+id/date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownHeight="wrap_content"
                android:importantForAutofill="no"
                android:inputType="none"
                android:paddingHorizontal="10sp"
                android:paddingVertical="15sp"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
               android:text="@string/add_task"
            android:layout_marginVertical="40sp"
            app:backgroundTint="@color/vilote"
            android:paddingVertical="15sp"
            app:cornerRadius="10sp"
            />

    </LinearLayout>

</ScrollView>